# SHIFTStonksBot

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.eu.md  README.md  pyproject.toml  setup.cfg
stonks_shift_bot/: bot.py  logger.txt
stonks_shift_bot/data/: config.py
stonks_shift_bot/filters/: __init__.py  check_date.py  check_tickers.py  is_admin.py
stonks_shift_bot/handlers/errors/: __init__.py  not_modified.py
stonks_shift_bot/handlers/user/: __init__.py  check.py  help.py  history_check.py  htickers.py  logger.txt  moex_requests.py  start.py  tickers.py
stonks_shift_bot/tests/: test_stonks_shift_bot.py
stonks_shift_bot/tests/bot/: __init__.py  test_message.py  test_state_group.py
stonks_shift_bot/tests/bot/types/: dataset.py
stonks_shift_bot/utils/misc/: logging.py  throttling.py
